src/css/style.css
/*** VARIABLES ***************************************************************/
:root {
  /* Colors */
  --color__black: #020100;
  --color__white: #fdfffc;

  --color__primary: var(--color__black);
  --color__secondary: var(--color__white);
  --color__tertiary: #c1292e;
  --color__quarternary: #235789;
  --color__quinary: #519e8a;
  --color__gradient: linear-gradient(160deg, var(--color__quarternary), var(--color__quinary));

  /* Fonts & Typography */
  --font__sans: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif,
    'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
  --font__serif: Georgia, Cambria, 'Times New Roman', Times, serif;
  --font__mono: Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New', monospace;
  --font__weight: 400;
  --font__weight--bold: 600;

  /* Spacing */
  --spacing--lg: 6.4rem;
  --spacing--md: 3.2rem;
  --spacing--sm: 1.6rem;
  --spacing--xs: 0.8rem;

  /* Breakpoints */
}

/*** BASIC RESET *************************************************************/
*,
*::before,
*::after {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
  z-index: 0;
  line-height: 1;
  background-color: transparent;
}

/*** BASE STYLES *************************************************************/
*::selection {
  color: var(--color__secondary);
  background-color: var(--color__quinary);
}

html {
  font-size: 62.5%;
}

body {
  color: var(--color__primary);
  background-color: var(--color__secondary);
  font-family: var(--font__sans);
  font-size: 2rem;
  font-weight: var(--font__weight);
}

h1 {
  font-size: inherit;
  font-weight: inherit;
}

a {
  color: var(--color__tertiary);
  display: inline-block;
  text-decoration: none;
}

a:hover,
a:active {
  color: var(--color__quinary);
}

img {
  max-width: 100%;
  height: auto;
}

abbr,
acronym {
  border: none;
  text-decoration: none;
}

/*** LAYOUT ******************************************************************/
.container {
  background-color: var(--color__secondary);
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%23235789' fill-opacity='0.13'%3E%3Cpath opacity='.5' d='M96 95h4v1h-4v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9zm-1 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-9-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm9-10v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-9-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm9-10v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-9-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm9-10v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-9-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9z'/%3E%3Cpath d='M6 5V0H5v5H0v1h5v94h1V6h94V5H6z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
  background-attachment: fixed;
}

section > * {
  padding: 0 var(--spacing--xs);
}

#footer {
  margin-top: var(--spacing--md);
  font-size: small;
  text-align: center;
}

/*** COMPONENTS **************************************************************/
/* Personal information */
.person {
  margin-top: var(--spacing--xs);
  text-align: center;
  position: relative;
}

.person__photo {
  width: 100%;
  max-width: 60rem;
}

.person__text {
  position: absolute;
  bottom: var(--spacing--sm);
  left: 50%;
  transform: translateX(-50%);
  width: 30rem;
}

.person__name {
  font-family: var(--font__sans);
  font-weight: var(--font__weight--bold);
  font-size: 120%;
}

.person__tagline {
  /* display: inline-block; */
  font-size: 80%;
  color: var(--color__secondary);
  margin-top: var(--spacing--xs);
}

/* Contact information */
.contact__list {
  margin-top: var(--spacing--md);
  list-style: none;
}

.contact__item {
  margin-bottom: var(--spacing--xs);
  text-align: center;
}

.contact__item .ico {
  margin-right: var(--spacing--xs);
}

.contact__link {
  min-width: 4.8rem;
  width: 30rem;
  min-height: 48px;
  padding: var(--spacing--xs);
  line-height: 3.2rem;
  color: var(--color__secondary);
  background-color: var(--color__tertiary);
}

.contact__link:active,
.contact__link:hover {
  color: var(--color__secondary);
  background-color: var(--color__quinary);
}

.contact__link:hover .ico {
  transform: rotate(360deg);
  /* transform-origin: bottom; */
}

/* Testimonial quotes */
.testimonial__container {
  /* margin-top: var(--spacing--lg); */
  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
  justify-content: center;
}

.testimonial__block {
  margin-top: var(--spacing--lg);
  width: 100%;
  max-width: 32rem;
  padding: var(--spacing--sm);
}

.testimonial__quote {
  position: relative;
  border-width: 1px 0;
  border-style: solid;
  border-color: var(--color__quarternary);
  padding: var(--spacing--sm) 0;
  font-style: italic;
  line-height: 1.2;
}

.testimonial__quote::before {
  position: absolute;
  content: '\201C';
  top: 0em;
  left: 50%;
  width: 4rem;
  height: 3rem;
  transform: translate(-50%, -80%);
  color: var(--color__quarternary);
  background-color: var(--color__secondary);
  font-family: var(--font__serif);
  font-size: 8rem;
  font-style: normal;
  text-align: center;
}

.testimonial__source {
  margin-top: var(--spacing--xs);
  font-size: 80%;
  /* font-style: italic; */
  text-align: center;
}

/*** UTILITIES & HELPERS *****************************************************/
.ico {
  /* https://www.svgrepo.com/vectors/social-media-compilation/ */
  display: inline-block;
  width: 0.8em;
  height: 0.8em;
  font-size: 0.8em;
  transition: all .5s linear;
}

.screen {
  max-width: 40rem;
  margin: var(--spacing--sm) auto 0 auto;
  padding: var(--spacing--xs);
  color: var(--color__secondary);
  background-color: var(--color__primary);
  font-family: var(--font__mono);
  border-radius: 1rem;
}

/*** MEDIA QUERIES ***********************************************************/
@media (min-width: 600px) {
  #header {
    padding: var(--spacing--md) 0 var(--spacing--md) 0;
    background: var(--color__gradient);
    clip-path: polygon(0 8%, 100% 0, 100% 92%, 0 100%);
    box-shadow: 0 .16rem 8rem var(--color__primary);
  }
  .person__photo {
    transition: all .3s ease;
  }

  .person__text {
    transition: all .5s ease-out;
  }

  #header:hover .person__photo {
    filter: blur(2px);
  }

  #header:hover .person__text {
    transform: translate(-50%, -50%) scale(1.1);
    letter-spacing: 1.2px;
  }

  .person__photo {
    width: 40rem;
    border: 0rem solid var(--color__quarternary);
    border-radius: 100%;
  }

  .person__text {
    bottom: 0;
  }
}

/*** ANIMATIONS **************************************************************/

